--- a/packages/freq-domain/package.json
+++ b/packages/freq-domain/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dsp-dft",
-  "description": "Discrete Fourier Transform",
-  "version": "0.0.1",
+  "name": "dsp-freq-domain",
+  "description": "Functions to work with frequency domain signal representations",
+  "version": "0.0.0",
   "main": "build/index.js",
   "jsnext:main": "index",
   "scripts": {
@@ -9,7 +9,7 @@
     "test": "node test/test.js",
     "docs": "jsdoc2md index.js > README.md && cp README.md API.md"
   },
-  "repository": "https://github.com/oramics/dsp-kit/packages/dsp-dft",
+  "repository": "https://github.com/oramics/dsp-kit/packages/dsp-freq-domain",
   "keywords": [
     "fourier",
     "transform",
@@ -22,7 +22,9 @@
   "bugs": {
     "url": "https://github.com/oramics/dsp-kit/issues"
   },
-  "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-dft/#readme",
+  "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-freq-domain/#readme",
   "devDependencies": {
+    "dsp-buffer": "0.0.1",
+    "dspjs": "../../legacy"
   }
 }
