--- a/package.json
+++ b/package.json
@@ -4,12 +4,24 @@
   "scripts": {
     "test": "lerna exec -- npm test",
     "predocs": "lerna exec -- npm run docs",
-    "docs": "cat ./packages/*/API.md > docs/README.md"
+    "docs": "cat ./packages/*/API.md > docs/README.md",
+    "dist": "npm run dist:pack && npm run dist:minify && ls -hall dist/",
+    "dist:pack": "browserify packages/dsp/build/index.js -o dist/dsp-kit.js -t [ babelify --presets es2015 ]",
+    "dist:minify": "uglifyjs dist/dsp-kit.js > dist/dsp-kit.min.js"
   },
   "devDependencies": {
-    "lerna": "2.0.0-beta.30"
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
+    "lerna": "2.0.0-beta.30",
+    "rollup": "^0.38.2",
+    "tst": "^1.3.1"
   },
   "dependencies": {
     "jsdoc-to-markdown": "^2.0.1"
+  },
+  "standard": {
+    "ignore": [
+      "dist/*"
+    ]
   }
 }
