--- a/packages/dsp/package.json
+++ b/packages/dsp/package.json
@@ -1,10 +1,11 @@
 {
   "name": "dsp-kit",
-  "private": true,
-  "description": "",
-  "version": "0.0.0",
-  "main": "index.js",
+  "description": "Digital Signal Processing kit",
+  "version": "0.0.1",
+  "main": "build/index.js",
+  "jsnext:main": "index",
   "scripts": {
+    "pretest": "rollup -f cjs -o build/index.js -- index.js",
     "test": "node test/test.js",
     "docs": "jsdoc2md index.js > README.md && cp README.md API.md"
   },
@@ -23,8 +24,9 @@
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-kit/#readme",
   "dependencies": {
-    "dsp-buffer": "0.0.0",
-    "dsp-dft": "0.0.0",
-    "dsp-fft": "0.0.0"
+    "dsp-buffer": "^0.0.1",
+    "dsp-dft": "^0.0.1",
+    "dsp-fft": "^0.0.1",
+    "dsp-window": "^0.0.1"
   }
 }
