--- a/packages/fft/package.json
+++ b/packages/fft/package.json
@@ -1,10 +1,11 @@
 {
   "name": "dsp-fft",
-  "private": true,
-  "description": "",
-  "version": "0.0.0",
-  "main": "index.js",
+  "description": "Fast fourier transform",
+  "version": "0.0.1",
+  "main": "build/index.js",
+  "jsnext:main": "index",
   "scripts": {
+    "pretest": "rollup -f cjs -o build/index.js -- index.js",
     "test": "node test/test.js",
     "docs": "jsdoc2md index.js > README.md && cp README.md API.md"
   },
@@ -23,8 +24,7 @@
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-fft/#readme",
   "devDependencies": {
-    "tst": "^1.3.1",
-    "dsp-dft": "0.0.0",
-    "dsp-legacy": "0.0.0"
+    "dsp-dft": "^0.0.1",
+    "dspjs": "../../legacy"
   }
 }
