--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dft-kit",
+  "name": "dsp-kit-tools",
   "private": true,
   "scripts": {
     "test": "lerna exec -- npm test",
@@ -13,7 +13,9 @@
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
     "lerna": "2.0.0-beta.30",
-    "rollup": "^0.38.2",
+    "rollup": "^0.38.3",
+    "rollup-plugin-cleanup": "^0.1.4",
+    "rollup-plugin-node-resolve": "^2.0.0",
     "tst": "^1.3.1"
   },
   "dependencies": {
