--- a/packages/ola/package.json
+++ b/packages/ola/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "jsnext:main": "index",
   "scripts": {
-    "pretest": "rollup -f cjs -o build/index.js -- index.js",
+    "pretest": "rollup -c ../../rollup.config.js",
     "test": "node test/test.js",
     "docs": "jsdoc2md index.js > README.md && cp README.md API.md"
   },
@@ -23,5 +23,7 @@
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-ola/#readme",
   "devDependencies": {
+    "dsp-buffer": "^0.0.1",
+    "dsp-window": "^0.0.1"
   }
 }
