--- a/packages/window/package.json
+++ b/packages/window/package.json
@@ -3,9 +3,9 @@
   "description": "Windowing functions for digital signal processing",
   "version": "0.0.1",
   "main": "build/index.js",
-  "jsnext:main": "index",
+  "module": "index.js",
   "scripts": {
-    "pretest": "rollup -f cjs -o build/index.js -- index.js",
+    "pretest": "rollup -c ../../rollup.config.js",
     "test": "node test/test.js",
     "docs": "jsdoc2md index.js > README.md && cp README.md API.md"
   },
