--- a/package.json
+++ b/package.json
@@ -16,14 +16,12 @@
     "rollup": "^0.38.3",
     "rollup-plugin-cleanup": "^0.1.4",
     "rollup-plugin-node-resolve": "^2.0.0",
-    "tst": "^1.3.1"
-  },
-  "dependencies": {
+    "tst": "^1.3.1",
     "jsdoc-to-markdown": "^2.0.1"
   },
   "standard": {
     "ignore": [
-      "dist/*"
+      "dist/*", "*.md"
     ]
   }
 }
