--- a/packages/elastica/package.json
+++ b/packages/elastica/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "dsp-fft",
-  "description": "Fast fourier transform",
+  "name": "elastica",
+  "description": "Audio timestretch for Web Audio API",
   "version": "0.0.1",
   "main": "build/index.js",
-  "module": "index",
+  "jsnext:main": "index",
   "scripts": {
     "pretest": "rollup -f cjs -o build/index.js -- index.js",
     "test": "node test/test.js",
     "docs": "jsdoc2md index.js > README.md && cp README.md API.md"
   },
-  "repository": "https://github.com/oramics/dsp-kit/packages/dsp-fft",
+  "repository": "https://github.com/oramics/dsp-kit/packages/elastica",
   "keywords": [
-    "fast",
-    "fourier",
-    "transform",
-    "dsp",
-    "dsp-kit"
+    "audio",
+    "timestretch",
+    "pitchchange",
+    "dsp"
   ],
   "author": "danigb",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/oramics/dsp-kit/issues"
   },
-  "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-fft/#readme",
+  "homepage": "https://github.com/oramics/dsp-kit/packages/elastica/#readme",
   "devDependencies": {
-    "dsp-dft": "^0.0.1",
-    "dspjs": "../../legacy"
   }
 }
