--- a/packages/spectrum/package.json
+++ b/packages/spectrum/package.json
@@ -3,7 +3,7 @@
   "description": "Functions to work with frequency domain signal representations",
   "version": "0.0.0",
   "main": "build/index.js",
-  "jsnext:main": "index",
+  "module": "index",
   "scripts": {
     "pretest": "rollup -f cjs -o build/index.js -- index.js",
     "test": "node test/test.js",
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-spectrum/#readme",
   "devDependencies": {
     "dsp-buffer": "0.0.1",
+    "dsp-fft": "0.0.1",
     "dspjs": "../../legacy"
   }
 }
