--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "test": "lerna exec -- npm test",
     "predocs": "lerna exec -- npm run docs",
-    "docs": "cat ./packages/*/API.md > docs/README.md",
+    "docs": "cat ./packages/*/API.md > docs/API.md",
     "dist": "npm run dist:pack && npm run dist:minify && ls -hall dist/",
     "dist:pack": "browserify packages/dsp/build/index.js -o dist/dsp-kit.js -t [ babelify --presets es2015 ]",
     "dist:minify": "uglifyjs dist/dsp-kit.js > dist/dsp-kit.min.js"
