--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
+    "benchmark": "^2.1.3",
+    "jsdoc-to-markdown": "^2.0.1",
     "lerna": "2.0.0-beta.30",
+    "microtime": "^2.1.2",
     "rollup": "^0.38.3",
     "rollup-plugin-cleanup": "^0.1.4",
     "rollup-plugin-node-resolve": "^2.0.0",
-    "tst": "^1.3.1",
-    "jsdoc-to-markdown": "^2.0.1"
+    "tst": "^1.3.1"
   },
   "standard": {
     "ignore": [
-      "dist/*", "*.md"
+      "dist/*",
+      "*.md"
     ]
   }
 }
