--- a/packages/dsp/package.json
+++ b/packages/dsp/package.json
@@ -3,9 +3,9 @@
   "description": "Digital Signal Processing kit",
   "version": "0.0.1",
   "main": "build/index.js",
-  "jsnext:main": "index",
+  "module": "index",
   "scripts": {
-    "pretest": "rollup -f cjs -o build/index.js -- index.js",
+    "pretest": "rollup -c ../../rollup.config.js",
     "test": "node test/test.js",
     "docs": "jsdoc2md index.js > README.md && cp README.md API.md"
   },
@@ -27,6 +27,7 @@
     "dsp-buffer": "^0.0.1",
     "dsp-dft": "^0.0.1",
     "dsp-fft": "^0.0.1",
+    "dsp-spectrum": "^0.0.0",
     "dsp-window": "^0.0.1"
   }
 }
