--- a/packages/elastica/package.json
+++ b/packages/elastica/package.json
@@ -3,7 +3,7 @@
   "description": "Audio timestretch for Web Audio API",
   "version": "0.0.1",
   "main": "build/index.js",
-  "jsnext:main": "index",
+  "module": "index",
   "scripts": {
     "pretest": "rollup -f cjs -o build/index.js -- index.js",
     "test": "node test/test.js",
