--- a/packages/oscillator/package.json
+++ b/packages/oscillator/package.json
@@ -4,7 +4,7 @@
   "description": "Wavetable oscillators",
   "version": "0.0.0",
   "main": "build/index.js",
-  "jsnext:main": "index",
+  "module": "index",
   "scripts": {
     "pretest": "rollup -f cjs -o build/index.js -- index.js",
     "test": "node test/test.js",
