convert to es5 via babel. benchmarks

--- a/packages/dsp/package.json
+++ b/packages/dsp/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "module": "index",
   "scripts": {
-    "pretest": "rollup -c ../../rollup.config.js",
+    "pretest": "rollup -c ./rollup.config.js",
     "test": "node test/test.js",
     "docs": "jsdoc2md index.js > README.md && cp README.md API.md"
   },
