--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "predocs": "lerna exec -- npm run docs",
     "docs": "cat ./packages/*/API.md > docs/API.md",
     "dist": "npm run dist:pack && npm run dist:minify && ls -hall dist/",
-    "dist:pack": "browserify packages/dsp/build/index.js -o dist/dsp-kit.js -t [ babelify --presets es2015 ]",
-    "dist:minify": "uglifyjs dist/dsp-kit.js > dist/dsp-kit.min.js"
+    "dist:pack": "browserify packages/dsp/browser.js -o dist/dsp-kit.js",
+    "dist:minify": "uglifyjs dist/dsp-kit.js > dist/dsp-kit.min.js",
+    "benchmarks": "node benchmarks/fft.js"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "babelify": "^7.3.0",
     "benchmark": "^2.1.3",
+    "fft": "^0.2.1",
     "jsdoc-to-markdown": "^2.0.1",
     "lerna": "2.0.0-beta.30",
     "microtime": "^2.1.2",
     "rollup": "^0.38.3",
+    "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-cleanup": "^0.1.4",
     "rollup-plugin-node-resolve": "^2.0.0",
     "tst": "^1.3.1"
