--- a/packages/ola/package.json
+++ b/packages/ola/package.json
@@ -8,7 +8,7 @@
     "pretest": "rollup -c ../../rollup.config.js",
     "test": "node test/test.js",
     "docs": "jsdoc2md index.js > README.md && cp README.md API.md",
-    "start": "npm run pretest && budo example/example.js"
+    "example": "npm run pretest && budo example/example.js"
   },
   "repository": "https://github.com/oramics/dsp-kit/packages/dsp-ola",
   "keywords": [
