--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dist": "npm run dist:pack && npm run dist:minify && ls -hall dist/",
     "dist:pack": "browserify packages/dsp/browser.js -o dist/dsp-kit.js",
     "dist:minify": "uglifyjs dist/dsp-kit.js > dist/dsp-kit.min.js",
-    "benchmarks": "node benchmarks/fft.js"
+    "benchmarks": "npm run benchmarks:forward",
+    "benchmarks:forward": "node benchmarks/fft-forward.js",
+    "benchmarks:inverse": "node benchmarks/fft-inverse.js"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
