--- a/packages/elastica/package.json
+++ b/packages/elastica/package.json
@@ -9,7 +9,8 @@
     "test": "node test/test.js",
     "docs": "jsdoc2md index.js > README.md && cp README.md API.md",
     "example": "budo --open example/example.js",
-    "example:ola": "budo --open example/amen-ola.js"
+    "example:ola": "budo --open example/amen-ola.js",
+    "example:phase": "budo --open example/phase-vocoder.js"
   },
   "repository": "https://github.com/oramics/dsp-kit/packages/elastica",
   "keywords": [
@@ -25,15 +26,14 @@
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/elastica/#readme",
   "devDependencies": {
-    "add-canvas": "gist:2e32779f41baefc491a370a138767fdf",
     "audio-context": "^0.1.0",
-    "exemplary": "gist:2e32779f41baefc491a370a138767fdf",
     "h": "^0.1.0",
     "inferno": "^1.1.2",
     "inferno-hyperscript": "^1.1.2"
   },
   "dependencies": {
     "dsp-buffer": "0.0.1",
-    "dsp-ola": "0.0.1"
+    "dsp-ola": "0.0.1",
+    "dsp-phase-vocoder": "0.0.1"
   }
 }
