--- a/packages/phase-vocoder/package.json
+++ b/packages/phase-vocoder/package.json
@@ -27,7 +27,8 @@
     "dsp-buffer": "^0.0.1",
     "dsp-window": "^0.0.1",
     "dsp-spectrum": "^0.0.0",
-    "dsp-fft": "^0.0.1"
+    "dsp-fft": "^0.0.1",
+    "dsp-fftshift": "^0.0.1"
   },
   "devDependencies": {
   }
