--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dist:pack": "browserify packages/dsp/browser.js -o dist/dsp-kit.js",
     "dist:minify": "uglifyjs dist/dsp-kit.js > dist/dsp-kit.min.js",
     "benchmarks": "npm run benchmarks:forward",
-    "benchmarks:forward": "node benchmarks/fft-forward.js",
-    "benchmarks:inverse": "node benchmarks/fft-inverse.js"
+    "benchmarks:forward": "node benchmarks/forward.js",
+    "benchmarks:inverse": "node benchmarks/inverse.js"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
