--- a/packages/oscillator/package.json
+++ b/packages/oscillator/package.json
@@ -6,9 +6,10 @@
   "main": "build/index.js",
   "module": "index",
   "scripts": {
-    "pretest": "rollup -f cjs -o build/index.js -- index.js",
+    "pretest": "rollup -c ../../rollup.config.js",
     "test": "node test/test.js",
-    "docs": "jsdoc2md index.js > README.md && cp README.md API.md"
+    "docs": "jsdoc2md index.js > README.md && cp README.md API.md",
+    "start": "budo --open example/example.js"
   },
   "repository": "https://github.com/oramics/dsp-kit/packages/dsp-oscillator",
   "keywords": [
@@ -22,6 +23,13 @@
     "url": "https://github.com/oramics/dsp-kit/issues"
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-oscillator/#readme",
+  "dependencies": {
+    "dsp-buffer": "^0.0.1"
+  },
   "devDependencies": {
+    "audio-context": "^0.1.0",
+    "dsp-waa": "^0.0.1",
+    "h": "^0.1.0",
+    "dspjs": "../../benchmarks/dspjs"
   }
 }
