--- a/packages/phase-vocoder/package.json
+++ b/packages/phase-vocoder/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/phase-vocoder/#readme",
   "dependencies": {
-    "dsp-buffer": "^0.0.1",
+    "dsp-array": "^0.0.1",
     "dsp-window": "^0.0.1",
     "dsp-spectrum": "^0.0.0",
     "dsp-fft": "^0.0.1",
