--- a/packages/delay/package.json
+++ b/packages/delay/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
   },
   "devDependencies": {
-    "dsp-buffer": "^0.0.1",
+    "dsp-array": "^0.0.1",
     "dsp-dft": "^0.0.1",
     "dspjs": "../../benchmarks/dspjs"
   }
