--- a/packages/fft-alt/package.json
+++ b/packages/fft-alt/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/fft-alt/#readme",
   "devDependencies": {
-    "dsp-buffer": "^0.0.1",
+    "dsp-array": "^0.0.1",
     "dspjs": "../../benchmarks/dspjs"
   }
 }
