--- a/packages/fft/package.json
+++ b/packages/fft/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-fft/#readme",
   "devDependencies": {
-    "dsp-buffer": "^0.0.1",
+    "dsp-array": "^0.0.1",
     "dsp-dft": "^0.0.1",
     "dspjs": "../../benchmarks/dspjs"
   }
