--- a/packages/ola/package.json
+++ b/packages/ola/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-ola/#readme",
   "devDependencies": {
-    "dsp-buffer": "^0.0.1",
+    "dsp-array": "^0.0.1",
     "dsp-window": "^0.0.1"
   }
 }
