--- a/packages/oscillator/package.json
+++ b/packages/oscillator/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-oscillator/#readme",
   "dependencies": {
-    "dsp-buffer": "^0.0.1"
+    "dsp-array": "^0.0.1"
   },
   "devDependencies": {
     "audio-context": "^0.1.0",
