--- a/packages/window/package.json
+++ b/packages/window/package.json
@@ -24,6 +24,6 @@
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-window/#readme",
   "devDependencies": {
-    "dsp-buffer": "0.0.1"
+    "dsp-array": "0.0.1"
   }
 }
