--- a/packages/dft/package.json
+++ b/packages/dft/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "pretest": "rollup -f cjs -o build/index.js -- index.js",
     "test": "node test/test.js",
-    "docs": "jsdoc2md index.js > README.md && cp README.md API.md"
+    "docs": "jsdoc2md index.js > README.md && cp README.md ../../docs/API/dft.md"
   },
   "repository": "https://github.com/oramics/dsp-kit/packages/dsp-dft",
   "keywords": [
