--- a/packages/fft-alt/package.json
+++ b/packages/fft-alt/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "nopretest": "rollup -c ../../rollup.config.js",
     "test": "node test/*.js",
-    "docs": "jsdoc2md index.js > README.md && cp README.md API.md"
+    "docs": "jsdoc2md index.js > README.md && cp README.md ../../docs/API/fft-alt.md"
   },
   "repository": "https://github.com/oramics/dsp-kit/packages/fft-alt",
   "keywords": [
