--- a/packages/fftshift/package.json
+++ b/packages/fftshift/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "pretest": "rollup -c ../../rollup.config.js",
     "test": "node test/test.js",
-    "docs": "jsdoc2md index.js > README.md && cp README.md API.md",
-    "start": "npm run pretest && budo example/example.js"
+    "start": "npm run pretest && budo example/example.js",
+    "docs": "jsdoc2md index.js > README.md && cp README.md ../../docs/API/fftshift.md"
   },
   "repository": "https://github.com/oramics/dsp-kit/packages/dsp-fftshift",
   "keywords": [
