--- a/packages/ola/package.json
+++ b/packages/ola/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "pretest": "rollup -c ../../rollup.config.js",
     "test": "node test/test.js",
-    "docs": "jsdoc2md index.js > README.md && cp README.md API.md",
+    "docs": "jsdoc2md index.js > README.md && cp README.md ../../docs/API/ola.md",
     "example": "npm run pretest && budo example/example.js"
   },
   "repository": "https://github.com/oramics/dsp-kit/packages/dsp-ola",
