--- a/packages/oscillator/package.json
+++ b/packages/oscillator/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "pretest": "rollup -c ../../rollup.config.js",
     "test": "node test/test.js",
-    "docs": "jsdoc2md index.js > README.md && cp README.md API.md",
+    "docs": "jsdoc2md index.js > README.md && cp README.md ../../docs/API/oscillator.md",
     "start": "budo --open example/example.js"
   },
   "repository": "https://github.com/oramics/dsp-kit/packages/dsp-oscillator",
