array.gen to array.fill. New signal package. HTML documentation

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "lerna run pretest",
     "test": "lerna run test",
     "predocs": "lerna exec -- npm run docs",
-    "docs": "lerna run docs",
+    "docs": "npm run docs:html && npm run docs:api",
+    "docs:html": "jsdoc -c .jsdoc3.json",
+    "docs:api": "lerna run docs",
     "dist": "npm run dist:pack && npm run dist:minify && ls -hall dist/",
     "dist:pack": "browserify packages/dsp/browser.js -o dist/dsp-kit.js",
     "dist:minify": "uglifyjs dist/dsp-kit.js > dist/dsp-kit.min.js",
@@ -22,6 +24,7 @@
     "jsdoc-to-markdown": "^2.0.1",
     "lerna": "2.0.0-beta.30",
     "microtime": "^2.1.2",
+    "postman-jsdoc-theme": "0.0.2",
     "rollup": "^0.38.3",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-cleanup": "^0.1.4",
