--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-cleanup": "^0.1.4",
     "rollup-plugin-node-resolve": "^2.0.0",
+    "standard": "^8.6.0",
     "tst": "^1.3.1"
   },
   "standard": {
@@ -35,5 +36,8 @@
       "dist/*",
       "*.md"
     ]
+  },
+  "dependencies": {
+    "almost-equal": "^1.1.0"
   }
 }
