--- a/packages/dsp/package.json
+++ b/packages/dsp/package.json
@@ -23,7 +23,7 @@
     "url": "https://github.com/oramics/dsp-kit/issues"
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-kit/#readme",
-  "dependencies": {
+  "devDependencies": {
     "dsp-array": "^0.0.1",
     "dsp-dft": "^0.0.1",
     "dsp-fft": "^0.0.1",
