Working on fft asm.js version. Babel to all modules (improve general performance, realistic benchmarks)

--- a/packages/dft/package.json
+++ b/packages/dft/package.json
@@ -24,5 +24,6 @@
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-dft/#readme",
   "devDependencies": {
+    "dsp-array": "^0.0.1"
   }
 }
