--- a/packages/fft/package.json
+++ b/packages/fft/package.json
@@ -5,8 +5,9 @@
   "main": "build/index.js",
   "module": "index",
   "scripts": {
-    "pretest": "rollup -f cjs -o build/index.js -- index.js",
+    "pretest": "rollup -c ../../rollup.config.js",
     "test": "node test/test.js",
+    "benchmark": "node test/benchmark.js",
     "docs": "jsdoc2md index.js > README.md && cp README.md ../../docs/modules/fft.md"
   },
   "repository": "https://github.com/oramics/dsp-kit/packages/dsp-fft",
