Remove prepublish from package.json to make travis happy

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dsp-kit-tools",
   "private": true,
   "scripts": {
-    "prepublish": "npm test && npm run docs && npm run dist",
+    "precommit": "npm test && npm run docs && npm run dist",
     "build": "lerna run pretest",
     "test": "lerna run test",
     "test:data": "node test/test-data",
