--- a/packages/array/package.json
+++ b/packages/array/package.json
@@ -26,8 +26,10 @@
   },
   "homepage": "https://github.com/oramics/dsp-kit/packages/dsp-array/#readme",
   "devDependencies": {
-    "dsp-benchmark": "0.0.1",
+    "easy-benchmark": "../../support/easy-benchmark",
     "add-canvas": "gist:2e32779f41baefc491a370a138767fdf",
     "draw-waveform": "gist:ffe0c4e7a06586d4bbb018ca69887ae8"
+  },
+  "dependencies": {
   }
 }
